--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -31,7 +31,7 @@
     }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 768px) {
     .container {
     }
     
