--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -65,9 +65,11 @@ h2 {
     transform: translateX(50%);
 }
 
-@media (max-width: 425px) {
+@media (max-width: 768px) {
     .scrollImg {
         // transform: translateX(50%);
         display: none;
+        width: 0px;
+        height: 0px;
     }
 }
